knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Condition__c/pqcrush__pq_Condition__c.object-meta.xml
<CustomObject>
    <label>PQ Condition</label>
    <nameField>
        <displayFormat>Cond-{000000}</displayFormat>
        <label>Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PQ Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>