knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Condition__c/fields/pqcrush__Field__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>