knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Condition__c/fields/pqcrush__Parent_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Parent_Object_Id__c</fullName>
    <label>Parent Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>